--- a/app/views/trouble_posts/index.html.erb
+++ b/app/views/trouble_posts/index.html.erb
@@ -1,6 +1,6 @@
 <p>新規投稿</p>
 <%= form_with model: @trouble_post, local: true do |f| %>
-  <p>投稿<%= f.text_field :content %></p>
+  <p>投稿<%= f.text_field :content, required: true %></p>
   <%= f.submit "送信" %>
 <% end %>
 
