マイページの作成

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,8 +4,23 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
+    <%= f.label :なまえ %><br />
+    <%= f.text_field :username, autofocus: true %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :好きなジャンル %><br />
+    <%= f.text_field :favorite_genre, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :わたしの一冊 %><br />
+    <%= f.text_field :recomended_one, autofocus: true %>
   </div>
 
   <div class="field">
