--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,10 +2,50 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+　　
+  <div class="field">
+    <%= f.label :なまえ %><br />
+    <%= f.text_field :username, autofocus: true %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :好きなジャンル %><br />
+    <%= f.text_field :favorite_genre, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :わたしの一冊 %><br />
+    <%= f.text_field :recomended_one, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :わたしの一冊おすすめポイント %><br />
+    <%= f.text_field :recomended_one_point, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :お気に入りその２ %><br />
+    <%= f.text_field :recomended_two, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :お気に入りその３ %><br />
+    <%= f.text_field :recomended_three, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :お気に入りその4 %><br />
+    <%= f.text_field :recomended_four, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :お気に入りその２ %><br />
+    <%= f.text_field :recomended_five, autofocus: true %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
