--- a/app/views/trouble_posts/index.html.erb
+++ b/app/views/trouble_posts/index.html.erb
@@ -8,7 +8,9 @@
   <p>
     <%= trouble_post.user.username %>
     <%= trouble_post.content %>
-    <%= link_to "削除", trouble_post, method: :delete, data: { confirm: "削除しますか?" } %>
+    <% if current_user.id == trouble_post.user.id %>
+      <%= link_to "削除", trouble_post, method: :delete, data: { confirm: "削除しますか?" } %>
+    <% end %>
     <hr>
   </p>
 <% end %>
