--- a/app/views/trouble_posts/index.html.erb
+++ b/app/views/trouble_posts/index.html.erb
@@ -8,6 +8,8 @@
   <p>
     <%= trouble_post.user.username %>
     <%= trouble_post.content %>
+    <%= link_to "詳細", trouble_post %>
+    <%= link_to "コメント", trouble_post%>
     <% if current_user.id == trouble_post.user.id %>
       <%= link_to "削除", trouble_post, method: :delete, data: { confirm: "削除しますか?" } %>
     <% end %>
